src/tests/cases/snapshots/bandwhich__tests__cases__raw_mode__basic_startup.snap
---
source: src/tests/cases/raw_mode.rs
expression: "String::from_utf8(clone_stdout).unwrap()"
---

