src/tests/cases/snapshots/bandwhich__tests__cases__raw_mode__multiple_packets_of_traffic_from_single_connection.snap
---
source: src/tests/cases/raw_mode.rs
expression: formatted
---
Refreshing:
<NO TRAFFIC>

Refreshing:
process: <TIMESTAMP_REMOVED> "1" up/down Bps: 0/45 connections: 1
connection: <TIMESTAMP_REMOVED> <interface_name>:443 => 1.1.1.1:12345 (tcp) up/down Bps: 0/45 process: "1"
remote_address: <TIMESTAMP_REMOVED> 1.1.1.1 up/down Bps: 0/45 connections: 1


